--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="design-gif" src="https://media.giphy.com/media/bx3Cvt88j7PtM4SOaS/source.gif" alt="design-gif">
         <h3>Design & Development</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <p>hoho Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
         <img class="scrum-img" src="images/team.png" alt="scrum-img">
