--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>If you like to talk about Technologies, and languages as I do.</h3>
-        <p class="contact-message">Let's talk about implementing your project and fix your code!</p>
+        <p class="contact-message">Let's talk about implementing your next project!</p>
         <a class="btn" href="mailto:david@davidmiranda.ca">CONTACT ME</a>
       </div>
     </div>
