--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="design-gif" src="https://media.giphy.com/media/bx3Cvt88j7PtM4SOaS/source.gif" alt="design-gif">
         <h3>Design & Development</h3>
-        <p>I started learning about technologies at a young age, with working knowledge of Azure, HTML, CSS, Bootstrap, Javascript, and React.js.</p>
+        <p>I started learning the technologies at a young age, with working knowledge of Azure, HTML, CSS, Bootstrap, Javascript, and React.js.</p>
       </div>
       <div class="skill-row">
         <img class="scrum-img" src="images/team.png" alt="scrum-img">
