--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="design-gif" src="https://media.giphy.com/media/bx3Cvt88j7PtM4SOaS/source.gif" alt="design-gif">
         <h3>Design & Development</h3>
-        <p>I started learning the technologies at a young age, with working knowledge of Azure, HTML, CSS, Bootstrap, Javascript, and React.js.</p>
+        <p>I started learning the technologies at a young age, with working knowledge of Azure,Pager Duty, HTML, CSS, Bootstrap, Javascript, and React.js.</p>
       </div>
       <div class="skill-row">
         <img class="scrum-img" src="images/team.png" alt="scrum-img">
@@ -51,7 +51,7 @@
       <a class="footer-link" href="https://wa.me/16513004042/?text= I%20would%20like%20to%20make%20an%20appointment">What'sapp</a>
       <a class="footer-link" href="mailto:david@davidmiranda.ca">Email</a>
       <a class="footer-link" href="http://www.davidmiranda.ca/">Website</a>
-      <p>© 2021 David Miranda.</p>
+      <p class="copyright">© 2021 David Miranda.</p>
     </div>
 
 </body>
