--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm David.</h1>
-    <p>a Scrum Master/Software Developer.</p>
+    <p>a Scrum Master / Developer.</p>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
