--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://wa.me/16513004042/?text= I%20would%20like%20to%20make%20an%20appointment">What'sapp</a>
       <a class="footer-link" href="mailto:david@davidmiranda.ca">Email</a>
-      <a class="footer-link" href="http://www.davidmiranda.ca/">Website</a>
-      <p class="copyright">© 2021 David Miranda.</p>
+      <a class="footer-link" href="http://nextcloud.miranda.bar/">Self Hosted Cloud</a>
+      <p class="copyright">© 2022 David Miranda.</p>
     </div>
 
 </body>
